--- a/web/themes/custom/contribtracker/package.json
+++ b/web/themes/custom/contribtracker/package.json
@@ -3,10 +3,13 @@
     "build": "gulp",
     "lint": "CI=true gulp lint",
     "vr": "percy exec -- cypress run",
-    "cypress-open": "cypress open --env inputTestFile=\"./cypress/fixtures/urls_endpoint.csv\",version=\"prod\" --browser chrome",
+    "cypress-run": "percy exec -- cypress run --env inputTestFile=\"./cypress/fixtures/urls_endpoint.csv\",version=\"prod\" --spec cypress/e2e/new.cy.js --browser chrome",
+    "cypress-open": "cypress open --env version=\"prod\" --browser chrome",
     "percy": "percy exec -- cypress run --env split=false,inputTestFile=\"./cypress/fixtures/urls_endpoint.csv\",grepTags=@vr2,version=\"stage\" --browser chrome --spec \"./cypress/e2e/*.cy.js\""
   },
   "devDependencies": {
+    "@cypress/grep": "^4.1.0",
+    "@cypress/xpath": "^2.0.3",
     "@percy/cli": "^1.29.0",
     "@percy/cypress": "^3.1.2",
     "@ronilaukkarinen/gulp-stylelint": "^14.1.2",
@@ -22,14 +25,6 @@
     "breakpoint-sass": "^3.0.0",
     "browser-sync": "^3.0.2",
     "cypress": "13.12.0",
-    "cypress-grep": "^2.0.1",
-    "cypress-xpath": "^2.0.1",
-    "mochawesome": "7.1.3",
-    "mochawesome-merge": "4.2.2",
-    "mochawesome-report-generator": "6.2.0",
-    "neat-csv": "5.1.0",
-    "scroll-to-bottomjs": "latest",
-    "test-results-reporter": "^1.0.19",
     "eslint": "^8.9.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
@@ -43,20 +38,21 @@
     "gulp-sass-glob": "^1.1.0",
     "gulp-svgstore": "^9.0.0",
     "gulp-typescript": "^6.0.0-alpha.1",
-    "postcss": "^8.4.40",
+    "postcss": "^8.4.38",
     "postcss-scss": "^4.0.9",
     "prettier": "^3.3.1",
     "sass": "^1.77.8",
     "sass-toolkit": "^2.10.2",
+    "scroll-to-bottomjs": "latest",
     "stylelint": "^15.11.0",
     "stylelint-prettier": "^4.1.0",
     "stylelint-scss": "5.0",
-    "typescript": "^5.5.4",
+    "typescript": "^5.4.5",
     "uuid": "^10.0.0"
   },
   "dependencies": {
-    "cypress-split": "^1.24.0",
     "@slack/web-api": "^6.11.2",
+    "cypress-split": "^1.24.0",
     "select2": "^4.1.0-rc.0"
   },
   "overrides": {
