add npm diff to pr comment

--- a/.github/workflows/dependency-diff.yml
+++ b/.github/workflows/dependency-diff.yml
@@ -45,6 +45,12 @@ jobs:
           composer global require davidrjonas/composer-lock-diff:^1.0
           composer-lock-diff --from=${{ github.event.pull_request.base.sha }} --md > composer-diff.md
 
+      - name: NPM Diff
+        if: contains(steps.changed-files.outputs.modified_files, 'web/themes/custom/contribtracker/package-lock.json')
+        run: |
+          npm install -g diff-lockfiles
+          diff-lockfiles --color ${{ github.event.pull_request.base.sha }} HEAD --shallow >> npm-diff.md
+
       - name: Add PR comment
         if: contains(steps.changed-files.outputs.modified_files, 'composer.lock')
         uses: mshick/add-pr-comment@v2
@@ -52,8 +58,4 @@ jobs:
           message-id: dependency-diff
           message-path: composer-diff.md
 
-      - name: NPM Diff
-        if: contains(steps.changed-files.outputs.modified_files, 'web/themes/custom/contribtracker/package-lock.json')
-        run: |
-          npm install -g diff-lockfiles
-          diff-lockfiles --color ${{ github.event.pull_request.base.sha }} HEAD --shallow
+
