--- a/.github/workflows/dependency-diff.yml
+++ b/.github/workflows/dependency-diff.yml
@@ -55,7 +55,7 @@ jobs:
           echo '```' >> dependency-diff.md
 
       - name: Add PR comment
-        if: contains(steps.changed-files.outputs.modified_files, 'composer.lock')
+        if: steps.changed-files.outputs.any_modified == 'true'
         uses: mshick/add-pr-comment@v2
         with:
           message-id: dependency-diff
