--- a/web/themes/custom/contribtracker/package.json
+++ b/web/themes/custom/contribtracker/package.json
@@ -5,6 +5,8 @@
     "vr": "percy exec -- cypress run"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.8.0",
     "@percy/cli": "^1.29.0",
     "@percy/cypress": "^3.1.2",
     "@ronilaukkarinen/gulp-stylelint": "^14.1.2",
@@ -22,9 +24,9 @@
     "cypress": "13.12.0",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-prettier": "^5.2.1",
     "gulp": "^5.0.0",
-    "gulp-eslint-new": "^2.1.0",
+    "gulp-eslint-new": "^2.2.0",
     "gulp-if": "^3.0.0",
     "gulp-imagemin": "^9.1.0",
     "gulp-postcss": "^10.0.0",
