--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,3 +13,4 @@ nav:
   - Testing: 'testing.md'
   - Monitoring and Logging: 'monitoring.md'
   - CI/CD: 'ci_cd.md'
+  - Functional Testing with Cypress: 'func_testing.md'
