--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,6 +67,7 @@ jobs:
       # For Cypress.
       CYPRESS_ADMIN_USERNAME: ct-admin
       CYPRESS_ADMIN_PASSWORD: ct-admin
+      CYPRESS_BASE_URL: https://contribtracker.ddev.site/
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
