--- a/web/modules/custom/ct_user/ct_user.info.yml
+++ b/web/modules/custom/ct_user/ct_user.info.yml
@@ -1,7 +1,7 @@
 name: 'Contrib Tracker Users'
 type: module
 description: 'Handles user related processing in Contrib Tracker'
-core_version_requirement: ^9.5 || ^10.0
+core_version_requirement: ^10.3 || ^11.0
 package: Contrib Tracker
 dependencies:
-  - social_auth
+  - social_auth:social_auth
