--- a/web/themes/custom/contribtracker/package.json
+++ b/web/themes/custom/contribtracker/package.json
@@ -23,6 +23,7 @@
     "breakpoint-sass": "^3.0.0",
     "browser-sync": "^3.0.2",
     "cypress": "13.12.0",
+    "cypress-real-events": "^1.13.0",
     "eslint": "^8.9.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
