--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -111,6 +111,9 @@ jobs:
         uses: ScribeMD/docker-cache@0.5.0
         with:
           key: ddev-images-${{ runner.os }}-${{ steps.ddev_version.outputs.ddev_version }}-${{ hashFiles('.ddev/config.yaml', '.ddev/docker-compose.cypress.yaml', '.ddev/docker-compose.redis.yaml') }}
+          # This disables the cache for PRs and tag events.
+          read-only: ${{ github.event_name == 'pull_request' || github.ref_type == 'tag' }}
+
 
       - name: Set the platform.sh token
         run: |
