--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,10 +5,13 @@
       "name": "Listen for Xdebug",
       "type": "php",
       "request": "launch",
+      "hostname": "0.0.0.0",
       "port": 9003,
       "pathMappings": {
-        "/app": "${workspaceRoot}"
-      }
+        "/var/www/html": "${workspaceFolder}"
+      },
+      "preLaunchTask": "DDEV: Enable Xdebug",
+      "postDebugTask": "DDEV: Disable Xdebug"
     },
     {
       "name": "Launch currently open script",
