--- a/web/themes/custom/contribtracker/package.json
+++ b/web/themes/custom/contribtracker/package.json
@@ -3,9 +3,9 @@
     "build": "gulp",
     "lint": "CI=true gulp lint",
     "vr": "percy exec -- cypress run",
-    "cypress-open": "cypress open --env version=prod --browser chrome",
-    "cypress-run": "cypress run --env version=prod --browser chrome",
-    "cypress:run:without-video": "CYPRESS_VIDEO=false cypress run --env version=prod"
+    "cypress-open": "cypress open --browser chrome",
+    "cypress-run": "cypress run --browser chrome",
+    "cypress:run:without-video": "CYPRESS_VIDEO=false cypress run"
   },
   "devDependencies": {
     "@percy/cli": "^1.29.0",
