Added major Tagged Test Filter configurations

--- a/web/themes/custom/contribtracker/package.json
+++ b/web/themes/custom/contribtracker/package.json
@@ -5,7 +5,13 @@
     "vr": "percy exec -- cypress run",
     "cypress-open": "cypress open --browser chrome",
     "cypress-run": "cypress run --browser chrome",
-    "cypress:run:without-video": "CYPRESS_VIDEO=false cypress run"
+    "cypress:run:without-video": "CYPRESS_VIDEO=false cypress run",
+    "cypress-open": "cypress open --env version=prod --browser chrome",
+    "cypress-run": "cypress run --env version=prod --browser chrome",
+    "cypress:run:without-video": "CYPRESS_VIDEO=false cypress run --env version=prod",
+    "test:smoke": "cypress run --env grepTags=smoke",
+    "test:regression": "cypress run --env grepTags=regression",
+    "test:expensive": "cypress run --env grepTags=expensive"
   },
   "devDependencies": {
     "@percy/cli": "^1.29.0",
@@ -24,6 +30,7 @@
     "browser-sync": "^3.0.2",
     "cypress": "13.12.0",
     "cypress-real-events": "^1.13.0",
+    "cypress-grep": "^3.0.4",
     "eslint": "^8.9.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
