--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,9 @@ on:
     tags:
       - "*"
   pull_request:
-
+  schedule:   # Scheduled nightly and weekly jobs
+    - cron: '0 0 * * *'  # Nightly at midnight
+    - cron: '0 0 * * 0'  # Weekly on Sunday midnight
 concurrency:
   group: ${{ github.ref }}
   cancel-in-progress: true
@@ -198,8 +200,16 @@ jobs:
       - name: Change admin password to make it easier for Cypress tests
         run: ddev drush upwd "$CYPRESS_ADMIN_USERNAME" "$CYPRESS_ADMIN_PASSWORD"
 
-      - name: Cypress Test
-        run: ddev cypress-run
+      - name: Run smoke tests
+        run: ddev cypress-run --env grepTags=smoke
+      
+      - name: Run regression tests (nightly)
+        if: github.event_name == 'schedule' && github.event.schedule == '0 0 * * *'
+        run: ddev cypress-run --env grepTags=regression
+      
+      - name: Run expensive tests (weekly)
+        if: github.event_name == 'schedule' && github.event.schedule == '0 0 * * 0'
+        run: ddev cypress-run --env grepTags=expensive
 
       - name: Save Cypress recordings
         if: always()
