--- a/web/modules/custom/ct_github/ct_github.services.yml
+++ b/web/modules/custom/ct_github/ct_github.services.yml
@@ -1,7 +1,7 @@
 services:
   ct_github.query:
     class: Drupal\ct_github\GithubQuery 
-    arguments: ['@config.factory', '@cache.data'] 
+    arguments: ['@config.factory', '@cache.data', '@logger.factory'] 
   ct_github.loggerChannel:
     parent: logger.channel_base
     arguments: ['ct_github']
