fix: grumphp config is actually regex
GrumPHP's PHPCS was not scanning modules such as `ct_github` because of the ignore_pattern that said `.github`. It turns out that the pattern is actually regex and it was matching what we don't want.

--- a/grumphp.yml
+++ b/grumphp.yml
@@ -34,9 +34,9 @@ grumphp:
       standard:
         - phpcs.xml
       ignore_patterns:
-        - .github
-        - .gitlab
-        - .ddev
+        - /\.github
+        - /\.gitlab
+        - /\.ddev
         - /config
         - /drush
         - /web/robots.txt
