chore: export views changes after BEF upgrade

--- a/config/sync/views.view.all_contributions.yml
+++ b/config/sync/views.view.all_contributions.yml
@@ -464,6 +464,7 @@ display:
               allow_secondary: false
               secondary_label: 'Advanced options'
               secondary_open: false
+              autosubmit_textfield_minimum_length: 3
             filter:
               type:
                 plugin_id: default
