--- a/config/sync/views.view.code_contributions.yml
+++ b/config/sync/views.view.code_contributions.yml
@@ -654,6 +654,7 @@ display:
               input_required: false
               allow_secondary: false
               secondary_label: 'Advanced options'
+              autosubmit_textfield_minimum_length: 3
       access:
         type: perm
         options:
