--- a/config/sync/views.view.event_contributions.yml
+++ b/config/sync/views.view.event_contributions.yml
@@ -524,6 +524,7 @@ display:
               input_required: false
               allow_secondary: false
               secondary_label: 'Advanced options'
+              autosubmit_textfield_minimum_length: 3
       access:
         type: perm
         options:
