--- a/config/sync/views.view.non_code_contributions.yml
+++ b/config/sync/views.view.non_code_contributions.yml
@@ -522,6 +522,7 @@ display:
               input_required: false
               allow_secondary: false
               secondary_label: 'Advanced options'
+              autosubmit_textfield_minimum_length: 3
       access:
         type: perm
         options:
