--- a/config/sync/views.view.patches.yml
+++ b/config/sync/views.view.patches.yml
@@ -451,6 +451,7 @@ display:
               autosubmit_hide: false
               allow_secondary: false
               secondary_label: 'Advanced options'
+              autosubmit_textfield_minimum_length: 3
             field_contribution_date_value:
               bef_format: bef_datepicker
               more_options:
