Fixes issues with tags and CI related

--- a/web/themes/custom/contribtracker/package.json
+++ b/web/themes/custom/contribtracker/package.json
@@ -6,8 +6,8 @@
     "cypress:open": "cypress open --browser chrome",
     "cypress:run": "cypress run --browser chrome",
     "cypress:run:without-video": "CYPRESS_VIDEO=false cypress run",
-    "cypress:run:smoke": "cypress run --env grepTags=smoke",
-    "cypress:run:regression": "cypress run --env grepTags=regression",
+    "cypress:run:critical-path": "cypress run --env grepTags=critical-path",
+    "cypress:run:security": "cypress run --env grepTags=security",
     "cypress:run:expensive": "cypress run --env grepTags=expensive"
   },
   "devDependencies": {
