--- a/web/themes/custom/contribtracker/package.json
+++ b/web/themes/custom/contribtracker/package.json
@@ -27,6 +27,8 @@
     "breakpoint-sass": "^3.0.0",
     "browser-sync": "^3.0.2",
     "cypress": "13.16.0",
+    "cypress-axe": "^1.5.0",
+    "cypress-file-upload": "^5.0.8",
     "cypress-real-events": "^1.13.0",
     "eslint": "^8.9.0",
     "eslint-config-prettier": "^9.1.0",
