--- a/web/themes/custom/contribtracker/package.json
+++ b/web/themes/custom/contribtracker/package.json
@@ -28,6 +28,7 @@
     "browser-sync": "^3.0.2",
     "cypress": "13.16.0",
     "cypress-real-events": "^1.13.0",
+    "cypress-axe": "^1.5.0",
     "eslint": "^8.9.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
