--- a/web/themes/custom/contribtracker/package.json
+++ b/web/themes/custom/contribtracker/package.json
@@ -21,8 +21,8 @@
     "@types/jqueryui": "^1.12.23",
     "@types/node": "^22.10.1",
     "@types/select2": "^4.0.63",
-    "@typescript-eslint/eslint-plugin": "^7.9.0",
-    "@typescript-eslint/parser": "^7.9.0",
+    "@typescript-eslint/eslint-plugin": "^8.18.1",
+    "@typescript-eslint/parser": "^8.18.1",
     "autoprefixer": "^10.4.20",
     "axe-core": "^4.10.2",
     "breakpoint-sass": "^3.0.0",
@@ -30,7 +30,7 @@
     "cypress": "13.16.0",
     "cypress-axe": "^1.5.0",
     "cypress-real-events": "^1.13.0",
-    "eslint": "^8.9.0",
+    "eslint": "^9.17.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "gulp": "^5.0.0",
@@ -55,11 +55,16 @@
     "uuid": "^11.0.3"
   },
   "dependencies": {
-    "select2": "^4.1.0-rc.0"
+    "@eslint/config-array": "^0.19.1",
+    "@eslint/object-schema": "^2.1.5",
+    "glob": "^11.0.0",
+    "inflight": "^1.0.6",
+    "rimraf": "^6.0.1",
+    "select2": "^4.1.0-rc.0",
+    "stable": "^0.1.8"
   },
   "overrides": {
-    "minimatch": "5.1.2",
-    "glob": "8.1.0"
+    "minimatch": "5.1.2"
   },
   "version": "1.0.0",
   "type": "module"
