--- a/web/themes/custom/contribtracker/package.json
+++ b/web/themes/custom/contribtracker/package.json
@@ -12,6 +12,8 @@
   },
   "devDependencies": {
     "@cypress/grep": "^4.1.0",
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.8.0",
     "@percy/cli": "^1.30.3",
     "@percy/cypress": "^3.1.2",
     "@ronilaukkarinen/gulp-stylelint": "^14.1.2",
@@ -21,16 +23,16 @@
     "@types/jqueryui": "^1.12.23",
     "@types/node": "^22.10.1",
     "@types/select2": "^4.0.63",
-    "@typescript-eslint/eslint-plugin": "^7.9.0",
-    "@typescript-eslint/parser": "^7.9.0",
+    "@typescript-eslint/eslint-plugin": "^8.18.0",
+    "@typescript-eslint/parser": "^8.18.0",
     "autoprefixer": "^10.4.20",
     "breakpoint-sass": "^3.0.0",
     "browser-sync": "^3.0.2",
     "cypress": "13.17.0",
     "cypress-real-events": "^1.13.0",
-    "eslint": "^8.9.0",
+    "eslint": "^9.17.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-prettier": "^5.2.1",
     "gulp": "^5.0.0",
     "gulp-eslint-new": "^2.4.0",
     "gulp-if": "^3.0.0",
