chore: switch to Node 22

--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -140,7 +140,7 @@ hooks:
     build: |
       set -e
       # Install the latest lts
-      n 20
+      n lts
       # Reset the location hash to recognize the newly installed version
       hash -r
 
