--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
 
   frontend_codequality:
     runs-on: ubuntu-latest
-    container: node:20
+    container: node:lts
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
