Added Other Two Cypress Test Scripts

--- a/web/themes/custom/contribtracker/package.json
+++ b/web/themes/custom/contribtracker/package.json
@@ -26,9 +26,11 @@
     "@typescript-eslint/eslint-plugin": "^8.18.0",
     "@typescript-eslint/parser": "^8.18.0",
     "autoprefixer": "^10.4.20",
+    "axe-core": "^4.10.2",
     "breakpoint-sass": "^3.0.0",
     "browser-sync": "^3.0.2",
     "cypress": "13.17.0",
+    "cypress-axe": "^1.5.0",
     "cypress-real-events": "^1.13.0",
     "eslint": "^9.17.0",
     "eslint-config-prettier": "^9.1.0",
