--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,3 +14,4 @@ nav:
   - Monitoring and Logging: 'monitoring.md'
   - CI/CD: 'ci_cd.md'
   - Functional Testing with Cypress: 'func_testing.md'
+  - Api Report: 'api-report/index.md'
