--- a/docs/api-report/navigation.yaml
+++ b/docs/api-report/navigation.yaml
@@ -1,14 +1,15 @@
 nav:
-  - Version latest:
-      - Namespaces:
-          - Drupal: namespaces/drupal.md
-      - Packages:
-          - Application: packages/Application.md
+  - API Reports:
+    - Overview: api-reports/index.md
+    - Namespaces:
+        - Drupal: api-reports/namespaces/drupal.md
+    - Packages:
+        - Application: api-reports/packages/Application.md
 
-  - Reports:
-      - Deprecated: reports/deprecated.md
-      - Errors: reports/errors.md
-      - Markers: reports/markers.md
+    - Reports:
+        - Deprecated: api-reports/reports/deprecated.md
+        - Errors: api-reports/reports/errors.md
+        - Markers: api-reports/reports/markers.md
 
-  - Indices:
-      - Files: indices/files.md
+    - Indices:
+        - Files: api-reports/indices/files.md
