fix: error in patches_on_issues view (#760)
The error is avoided by changing the aggregation settings of the
"Patches count" field to group on column "Value" instead of "Entity ID".
This commit updates the view configuration to use the correct
aggregation settings. The exported view doesn't seem to reflect the
changes but the view works correctly.

This fixes #760.

--- a/config/sync/views.view.patches_on_issues.yml
+++ b/config/sync/views.view.patches_on_issues.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.storage.node.field_code_contrib_patches_count
     - field.storage.node.field_code_contrib_project
     - field.storage.node.field_contribution_date
     - field.storage.node.field_contribution_technology
@@ -357,6 +358,7 @@ display:
         type: full
         options:
           offset: 0
+          pagination_heading_level: h4
           items_per_page: 25
           total_pages: null
           id: 0
@@ -374,7 +376,6 @@ display:
             offset: false
             offset_label: Offset
           quantity: 9
-          pagination_heading_level: h4
       exposed_form:
         type: basic
         options:
@@ -560,6 +561,7 @@ display:
         - 'user.node_grants:view'
         - user.permissions
       tags:
+        - 'config:field.storage.node.field_code_contrib_patches_count'
         - 'config:field.storage.node.field_code_contrib_project'
         - 'config:field.storage.node.field_contribution_date'
         - 'config:field.storage.node.field_contribution_technology'
@@ -590,6 +592,7 @@ display:
         - 'user.node_grants:view'
         - user.permissions
       tags:
+        - 'config:field.storage.node.field_code_contrib_patches_count'
         - 'config:field.storage.node.field_code_contrib_project'
         - 'config:field.storage.node.field_contribution_date'
         - 'config:field.storage.node.field_contribution_technology'
