fix: actually commit the config change
This change did not get exported earlier. It looks like a core bug. Exporting it a second time gave us the actual changes where the error is present.

--- a/config/sync/views.view.patches_on_issues.yml
+++ b/config/sync/views.view.patches_on_issues.yml
@@ -147,8 +147,8 @@ display:
           settings:
             thousand_separator: ''
             prefix_suffix: true
-          group_column: null
-          group_columns: null
+          group_column: value
+          group_columns: {  }
           group_rows: true
           delta_limit: 0
           delta_offset: 0
