--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -226,7 +226,7 @@ jobs:
         with:
           fetch-depth: 0
       - name: Deploy to platform.sh
-        uses: axelerant/platformsh-action@v1
+        uses: axelerant/platformsh-action@issue-75
         with:
           action: 'deploy'
           project-id: "brbqplxd7ycq6"
