--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           fetch-depth: 0
       - name: Deploy to platform.sh
-        uses: axelerant/platformsh-action@issue75
+        uses: axelerant/platformsh-action@main
         with:
           action: 'deploy'
           project-id: "brbqplxd7ycq6"
