--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -24,6 +24,7 @@ module:
   datetime_range: 0
   dblog: 0
   do_username: 0
+  drupal_insight_backstage: 0
   dynamic_page_cache: 0
   editor: 0
   field: 0
