refactor: Replace Cypress with Playwright for E2E tests
This commit replaces the existing Cypress end-to-end (E2E) tests with Playwright.

The Cypress test workflow (`.github/workflows/cypress-tests.yml`) has been renamed to `playwright-tests.yml` and updated to reflect the new testing framework.

Additionally, the `vr.yml` workflow has been modified to:
- Remove Cypress-specific environment variables.
- Add steps to install Playwright dependencies and browsers.
- Update the test execution command to use Playwright's Percy integration.
- Change the artifact upload path to store Playwright reports instead of Cypress recordings.

--- a/.github/workflows/playwright-tests.yml
+++ b/.github/workflows/playwright-tests.yml
@@ -1,16 +1,12 @@
-name: Cypress Tests
+name: Playwright Tests
 
 on:
   schedule:
     - cron: '0 0 * * 0'  # Weekly on Sunday midnight
 
 jobs:
-  cypress_tests:
+  playwright_tests:
     runs-on: ubuntu-latest
-
-    env:
-      CYPRESS_ADMIN_USERNAME: ct-admin
-      CYPRESS_ADMIN_PASSWORD: ct-admin
 
     steps:
       - name: Check out repository code
