--- a/.github/workflows/vr.yml
+++ b/.github/workflows/vr.yml
@@ -17,10 +17,6 @@ jobs:
   vr_test:
     runs-on: ubuntu-latest
     env:
-      # For Cypress.
-      CYPRESS_ADMIN_USERNAME: ct-admin
-      CYPRESS_ADMIN_PASSWORD: ct-admin
-      # For Percy
       PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
     steps:
       - name: Check out repository code
@@ -84,21 +80,23 @@ jobs:
           npm ci  --prefer-offline --no-audit
           gulp
 
-      - name: Change admin password to make it easier for Cypress tests
-        run: ddev drush upwd "$CYPRESS_ADMIN_USERNAME" "$CYPRESS_ADMIN_PASSWORD"
-
-      # If Percy integration is not required, use `ddev cypress-run` to run the Cypress tests without Percy
-      - name: Cypress Test with Percy Integration
+      - name: Install Playwright
         run: |
-          ddev exec --service cypress "git config --global --add safe.directory /e2e"
-          ddev percy-run
+          cd test/playwright
+          npm ci --prefer-offline --no-audit
+          npx playwright install --with-deps --only-shell chromium webkit
 
-      - name: Save Cypress recordings
+      - name: Run Playwright tests (Percy only)
+        run: |
+          cd test/playwright
+          npm run test:percy
+
+      - name: Save Playwright report
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: cypress-recordings
+          name: playwright-report
           path: |
-            web/themes/custom/contribtracker/cypress/screenshots
-            web/themes/custom/contribtracker/cypress/videos
+            test/playwright/playwright-report
+            test/playwright/tests/visual
           retention-days: 3
