refactor: Remove ddev-cypress add-on
The ddev-cypress add-on has been removed. This includes the removal of the manifest file, command scripts, and the docker-compose configuration. The CI workflows have also been updated to reflect this removal by adjusting the cache key to exclude the cypress docker compose file.

--- a/.github/workflows/vr.yml
+++ b/.github/workflows/vr.yml
@@ -61,7 +61,7 @@ jobs:
       - name: Cache Docker images
         uses: ScribeMD/docker-cache@0.5.0
         with:
-          key: ddev-images-${{ runner.os }}-${{ steps.ddev_version.outputs.ddev_version }}-${{ hashFiles('.ddev/config.yaml', '.ddev/docker-compose.cypress.yaml', '.ddev/docker-compose.redis.yaml') }}
+          key: ddev-images-${{ runner.os }}-${{ steps.ddev_version.outputs.ddev_version }}-${{ hashFiles('.ddev/config.yaml', '.ddev/docker-compose.redis.yaml') }}
 
       - name: Set the platform.sh token
         run: |
